--- a/src/Fucturizr.Core/Fucturizr.Core.fsproj
+++ b/src/Fucturizr.Core/Fucturizr.Core.fsproj
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,4 +7,5 @@
     <Compile Include="Update.fs" />
     <Compile Include="Core.fs" />
   </ItemGroup>
+  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
