--- a/test/Fucturizr.Core.Tests/Fucturizr.Core.Tests.fsproj
+++ b/test/Fucturizr.Core.Tests/Fucturizr.Core.Tests.fsproj
@@ -5,6 +5,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="UpdateTests.fs" />
     <Compile Include="SystemLandscapeTests.fs" />
   </ItemGroup>
   <ItemGroup>
