--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,7 @@ install:
 before_build:
   - cmd: dotnet --version
 build_script:
+  - cmd: dotnet build -c Release
   - cmd: dotnet pack -c Release
 deploy:  
 - provider: NuGet
